--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/query">Query </a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                 </ul>
             </div>
         </div>
