--- a/templates/query.html
+++ b/templates/query.html
@@ -40,6 +40,7 @@
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item"><a class="nav-link" href="/">Home</span></a></li>
                   <li class="nav-item active"><a class="nav-link" href="/query">Query <span class="sr-only">(current)</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
               </ul>
           </div>
       </div>
