--- a/templates/visualisation.html
+++ b/templates/visualisation.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
+
+    <a href="/query/visualisation/{{ snp.rs_value }}/sequencevisualisation" class="btn btn-primary">
+        Sequence Visualisation
+      </a>
+      
 </head>
 
 <style>
